// Vitest Snapshot v1

exports[`Reset page > renders correctly 1`] = `
"<section class=\\"container mx-auto\\">
  <h1 class=\\"\\">Password reset</h1>
  <form>
    <div class=\\"o-field\\"><label class=\\"o-field__label\\">Password</label>
      <div class=\\"o-ctrl-input\\"><input aria-required=\\"true\\" required=\\"\\" minlength=\\"6\\" class=\\"o-input o-input-iconspace-right\\" type=\\"password\\" autocomplete=\\"off\\">
        <!--v-if--><span class=\\"o-icon o-icon--clickable o-input__icon-right\\"><i class=\\"mdi mdi-eye mdi-24px\\"></i></span>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
    <div class=\\"o-field\\"><label class=\\"o-field__label\\">Password (confirmation)</label>
      <div class=\\"o-ctrl-input\\"><input aria-required=\\"true\\" required=\\"\\" minlength=\\"6\\" class=\\"o-input o-input-iconspace-right\\" type=\\"password\\" autocomplete=\\"off\\">
        <!--v-if--><span class=\\"o-icon o-icon--clickable o-input__icon-right\\"><i class=\\"mdi mdi-eye mdi-24px\\"></i></span>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div><button class=\\"button is-primary\\">Reset my password</button>
  </form>
</section>"
`;

exports[`Reset page > shows error if token is invalid 1`] = `
"<section class=\\"container mx-auto\\">
  <h1 class=\\"\\">Password reset</h1>
  <transition-stub title=\\"Error\\">
    <article class=\\"o-notification o-notification--danger\\">
      <!--v-if-->
      <!--v-if-->
      <div class=\\"o-notification__wrapper\\">
        <!--v-if-->
        <div class=\\"o-notification__content\\">The token you provided is invalid.</div>
      </div>
    </article>
  </transition-stub>
  <form>
    <div class=\\"o-field o-field--filled\\"><label class=\\"o-field__label\\">Password</label>
      <div class=\\"o-ctrl-input\\"><input aria-required=\\"true\\" required=\\"\\" minlength=\\"6\\" class=\\"o-input o-input-iconspace-right\\" type=\\"password\\" autocomplete=\\"off\\">
        <!--v-if--><span class=\\"o-icon o-icon--clickable o-input__icon-right\\"><i class=\\"mdi mdi-eye mdi-24px\\"></i></span>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
    <div class=\\"o-field o-field--filled\\"><label class=\\"o-field__label\\">Password (confirmation)</label>
      <div class=\\"o-ctrl-input\\"><input aria-required=\\"true\\" required=\\"\\" minlength=\\"6\\" class=\\"o-input o-input-iconspace-right\\" type=\\"password\\" autocomplete=\\"off\\">
        <!--v-if--><span class=\\"o-icon o-icon--clickable o-input__icon-right\\"><i class=\\"mdi mdi-eye mdi-24px\\"></i></span>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div><button class=\\"button is-primary\\">Reset my password</button>
  </form>
</section>"
`;
